--- a/wp-everything-image.css
+++ b/wp-everything-image.css
@@ -6,3 +6,24 @@
 .lazy.loaded {
   opacity: 1;
 }
+
+.wei-picture-wrapper {
+  position: relative;
+}
+.wei-picture-wrapper img {
+  min-width: 100%;
+}
+.wei-picture-wrapper .content {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+.wei-picture-wrapper .content .content-align {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
