--- a/src/scss/wp-everything-image.scss
+++ b/src/scss/wp-everything-image.scss
@@ -15,7 +15,8 @@
   position: relative;
 }
 .wei-picture-wrapper img {
-  min-width: 100%;
+  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 .wei-picture-wrapper .content {
