--- a/src/scss/wp-everything-image.scss
+++ b/src/scss/wp-everything-image.scss
@@ -1,35 +1,33 @@
 .lazy {
   opacity: 0;
-  -webkit-transition: opacity 0.5s;
   transition: opacity 0.5s;
-}
-.lazy.loaded {
-  opacity: 1;
-}
-.lazy.animation-complete {
-  -webkit-transition: none;
-  transition: none;
+  &.loaded {
+    opacity: 1;
+  }
+  // &.animation-complete {
+  //   -webkit-transition: none;
+  //   transition: none;
+  // }
 }
 
 .wei-picture-wrapper {
   position: relative;
-}
-.wei-picture-wrapper img {
-  width: 100%;
-  max-width: 100%;
-  height: auto;
-}
-.wei-picture-wrapper .content {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-.wei-picture-wrapper .content .content-align {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+  }
+  .content {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    .content-align {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 }
